--- a/app/home.html
+++ b/app/home.html
@@ -122,6 +122,66 @@
             </div>
         </div>
     </section>
+    <section class="our-clients">
+
+        <div class="our-clients__cont">
+            <span>הלקוחות שלנו</span>
+            <img src="./img/log19.svg" alt="">
+            <div class="our-clients__wrap">
+
+                <div class="our-clients__slider swiper-container">
+                    <div class="swiper-wrapper">
+
+
+
+
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log19.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log37.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log39.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log17.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log35.png" alt="">
+                        </div>
+
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log19.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log37.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log39.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log17.png" alt="">
+                        </div>
+                        <div class="single-client swiper-slide">
+                            <img src="./img/log35.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="btns">
+                    <div class="slider-btn slider-btn--next">
+                        <img src="./img/arr-l-b.svg" alt="">
+                    </div>
+                    <div class="slider-btn slider-btn--prev">
+                        <img src="./img/arr-l-b.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 
 
 </main>
