--- a/app/home.html
+++ b/app/home.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
@@ -24,7 +25,8 @@
 
     <section class="home-hero">
         <div class="img">
-            <img class="lazyload" data-src="./img/home-hero.png" alt="">
+            <img class="lazyload desk" data-src="./img/home-hero.png" alt="">
+            <img class="lazyload mob" data-src="./img/mobile-hero.png" alt="">
         </div>
         <div class="go-down">
             <p>לדמיין</p>
@@ -57,15 +59,15 @@
         <div class="container">
             <div class="numbers-cont">
                 <div class="single-number">
-                    <p>267</p>
+                    <p class="odometer" id="odometer-1" data-val="267">0</p>
                     <span>שנות התמחות</span>
                 </div>
                 <div class="single-number">
-                    <p>58</p>
+                    <p class="odometer" id="odometer-2" data-val="58">0</p>
                     <span>שנות פעילות</span>
                 </div>
                 <div class="single-number">
-                    <p>536</p>
+                    <p class="odometer" id="odometer-3" data-val="536">0</p>
                     <span>לקוחות</span>
                 </div>
             </div>
@@ -126,7 +128,6 @@
 
         <div class="our-clients__cont">
             <span>הלקוחות שלנו</span>
-            <img src="./img/log19.svg" alt="">
             <div class="our-clients__wrap">
 
                 <div class="our-clients__slider swiper-container">
