--- a/app/second-page.html
+++ b/app/second-page.html
@@ -26,11 +26,12 @@
     <section class="sec-hero">
         <div class="img">
             <img class="lazyload desk" data-src="./img/secpage1.png" alt="">
+            <img class="lazyload mob" data-src="./img/secher2.png" alt="">
         </div>
     </section>
     <section class="who-we-are">
         <div class="container">
-            <div class="who-we-are__cont">
+            <div class="who-we-are__cont txt-block">
                 <span>מי אנחנו</span>
 
                 <div class="text">
@@ -41,8 +42,9 @@
                         ומצוינות לארגונים. שירותי החברה מתחילים משלב המחקר והתכנון האסטרטגי ועד להטמעת
                         ויישום שינויים ארגוניים ופיתוח ארגוני ומתמחה בתחומים הבאים:
                     </p>
-                </div>
 
+                </div>
+                <a href="" class="btn-txt mob">קרא עוד</a>
 
             </div>
         </div>
@@ -52,6 +54,7 @@
             <a href="" class="single-rule">
                 <div class="img">
                     <img class="lazyload desk" data-src="./img/rul1.png" alt="">
+                    <img class="lazyload mob" data-src="./img/rul11.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>ייעוץ אסטרטגי</p>
@@ -61,6 +64,7 @@
             <a href="" class="single-rule">
                 <div class="img">
                     <img class="lazyload desk" data-src="./img/rul2.png" alt="">
+                    <img class="lazyload mob" data-src="./img/rul21.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>ייעוץ ופיתוח ניהולי</p>
@@ -70,6 +74,7 @@
             <a href="" class="single-rule">
                 <div class="img">
                     <img class="lazyload desk" data-src="./img/rul3.png" alt="">
+                    <img class="lazyload mob" data-src="./img/rul31.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>שירות וחווית לקוח</p>
@@ -79,6 +84,7 @@
             <a href="" class="single-rule">
                 <div class="img">
                     <img class="lazyload desk" data-src="./img/rul4.png" alt="">
+                    <img class="lazyload mob" data-src="./img/rul41.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>פיתוח ארגוני</p>
@@ -88,6 +94,7 @@
             <a href="" class="single-rule">
                 <div class="img">
                     <img class="lazyload desk" data-src="./img/rul5.png" alt="">
+                    <img class="lazyload mob" data-src="./img/rul51.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>פיתוח למידה והדרכה</p>
@@ -212,7 +219,9 @@
             <div class="our-infos__single">
                 <div class="head">
                     <span>אביטל עזרא בריימן</span>
-                    <p></p>
+                    <p>MA | סוציולוגית ארגונית | יועצת בכירה
+                        מנהלת תחום פיתוח ארגוני ולמידה
+                    </p>
                 </div>
                 <div class="text">
                     <p>מוסמך בפסיכולוגיה חברתית - סוציולוגיה, 25
