--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -23,7 +23,120 @@
 
 <main>
 
+    <section class="hero-default">
+        <div class="img">
+            <img class="lazyload desk" data-src="./img/herdef1.jpg" alt="">
+            <img class="lazyload mob" data-src="./img/herdef2.jpg" alt="">
+        </div>
+        <div class="her-down">תחומי ההתמחות שלנו </div>
+    </section>
 
+    <section class="our-knowledge">
+        <div class="knowledge-list">
+            <div class="single-knowledge">
+                <div class="img">
+                    <img class="lazyload desk" data-src="./img/kn1.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/rul11.jpg" alt="">
+                </div>
+                <div class="text">
+                    <span>ייעוץ אסטרטגי</span>
+                    <ul>
+                        <li>גיבוש תכניות אסטרטגיות</li>
+                        <li>מחקר אסטרטגי: סקרי עמדות פנים וחוץ ארגוניים</li>
+                        <li>ניתוח ומיפוי סביבות פעולה</li>
+                        <li>ליווי תהליכי תכנון אסטרטגי</li>
+                        <li>גיבוש חזון, ערכים ודרכי פעולה</li>
+                        <li>ליווי הטמעה ויישום של תכניות אסטרטגיות</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="single-knowledge">
+                <div class="img">
+                    <img class="lazyload desk" data-src="./img/kn2.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/rul21.jpg" alt="">
+                </div>
+                <div class="text">
+                    <span>ייעוץ ופיתוח ניהולי</span>
+                    <ul>
+                        <li>שיפור ואופטמיזציה של תהליכי עבודה</li>
+                        <li>עיצוב מחדש של תהליכי עבודה / reengeneering</li>
+                        <li> התאמת מבנים ארגוניים, הגדרות תפקיד, ניתוח<br> עיסוקים וממשקי עבודה</li>
+                        <li>תכנון ולווי שינויים ארגוניים</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="single-knowledge">
+                <div class="img">
+                    <img class="lazyload desk" data-src="./img/kn3.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/rul31.jpg" alt="">
+                </div>
+                <div class="text">
+                    <span>שירות וחווית לקוח</span>
+                    <ul>
+                        <li>פיתוח והטעת אסטרטגיות ותפיסות שירות</li>
+                        <li>עיצוב תהליכים לשיפור השירות וחווית הלקוח</li>
+                        <li>שיפור מיומנויות וכלים לניהול השירות</li>
+                        <li>פיתוח כלים למדידת והערכת שירות</li>
+                        <li>ליווי והטמעת טכנולוגיות וערוצי שירות אינטגרטיביים</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="single-knowledge">
+                <div class="img">
+                    <img class="lazyload desk" data-src="./img/kn4.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/rul41.jpg" alt="">
+                </div>
+                <div class="text">
+                    <span>פיתוח ארגוני</span>
+                    <ul>
+                        <li>פיתוח טאלנטים ועתודות ניהוליות</li>
+                        <li>ליווי קבוצות למידת עמיתים</li>
+                        <li>ליווי אישי למנהלים</li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="single-knowledge">
+                <div class="img">
+                    <img class="lazyload desk" data-src="./img/kn5.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/rul51.jpg" alt="">
+                </div>
+                <div class="text">
+                    <span>פיתוח למידה והדרכה</span>
+                    <ul>
+                        <li>פיתוח אסטרטגיית למידה ארגונית</li>
+                        <li>הקמת תחומי למידה והדרכה</li>
+                        <li>הערכת הדרכה ושדרוג הדרכות קיימות
+                        </li>
+                        <li>פיצוח פיתוח והפקה של כלי למידה
+                            <br> דיגיטאליים ופרונטאליים</li>
+                        <li>פיתוח והפקת משחקי למידה</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section class="numbers">
+        <div class="container">
+            <div class="numbers-cont">
+                <div class="single-number">
+                    <p class="odometer" id="odometer-1" data-val="267">0</p>
+                    <span>שנות התמחות</span>
+                </div>
+                <div class="single-number">
+                    <p class="odometer" id="odometer-2" data-val="58">0</p>
+                    <span>שנות פעילות</span>
+                </div>
+                <div class="single-number">
+                    <p class="odometer" id="odometer-3" data-val="536">0</p>
+                    <span>לקוחות</span>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 
 </main>
 
