pc, pixel fixes

--- a/app/home.html
+++ b/app/home.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
@@ -101,8 +102,8 @@
                             <img src="./img/spec3.svg" alt="">
                         </div>
 
-                        <p>ייעוץ <br>
-                            ופיתוח ניהולי</p>
+                        <p> שירות<br>
+                            וחווית לקוח</p>
                     </div>
                     <div class="single-specs">
                         <div class="img">
