pc, pixel fixes

--- a/app/article.html
+++ b/app/article.html
@@ -119,7 +119,7 @@
         </div>
     </section>
     <section class="second-our-blog">
-        <span>מאמרים</span>
+        <span>אולי יעניין אותך גם</span>
         <div class="blog-list">
             <a href="" class="single-blog">
                 <div class="img">
