--- a/app/blog.html
+++ b/app/blog.html
@@ -29,7 +29,8 @@
         <div class="blog-list">
             <a href="" class="single-blog">
                 <div class="img">
-                    <img class="lazyload" data-src="./img/bl1.jpg" alt="">
+                    <img class="lazyload desk" data-src="./img/bl1.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/bl11.png" alt="">
                 </div>
                 <div class="text">
                     <span>כותרת</span>
@@ -38,7 +39,8 @@
             </a>
             <a href="" class="single-blog">
                 <div class="img">
-                    <img class="lazyload" data-src="./img/bl2.jpg" alt="">
+                    <img class="lazyload desk" data-src="./img/bl2.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/bl21.png" alt="">
                 </div>
                 <div class="text">
                     <span>כותרת</span>
@@ -47,7 +49,8 @@
             </a>
             <a href="" class="single-blog">
                 <div class="img">
-                    <img class="lazyload" data-src="./img/bl3.jpg" alt="">
+                    <img class="lazyload desk" data-src="./img/bl3.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/bl31.png" alt="">
                 </div>
                 <div class="text">
                     <span>כותרת</span>
@@ -56,7 +59,8 @@
             </a>
             <a href="" class="single-blog">
                 <div class="img">
-                    <img class="lazyload" data-src="./img/bl4.jpg" alt="">
+                    <img class="lazyload desk" data-src="./img/bl4.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/bl41.png" alt="">
                 </div>
                 <div class="text">
                     <span>כותרת</span>
@@ -65,7 +69,8 @@
             </a>
             <a href="" class="single-blog">
                 <div class="img">
-                    <img class="lazyload" data-src="./img/bl5.jpg" alt="">
+                    <img class="lazyload desk" data-src="./img/bl5.jpg" alt="">
+                    <img class="lazyload mob" data-src="./img/bl51.png" alt="">
                 </div>
                 <div class="text">
                     <span>כותרת</span>
