--- a/app/article.html
+++ b/app/article.html
@@ -26,7 +26,8 @@
 
     <section class="article-hero">
         <div class="img">
-            <img class="lazyload" data-src="./img/article-bg.jpg" alt="">
+            <img class="lazyload desk" data-src="./img/article-bg.jpg" alt="">
+            <img class="lazyload mob" data-src="./img/article-bg2.png" alt="">
         </div>
         <div class="article-hero__info">
             <h1>כאן תבוא כותרת</h1>
